<resources>
    <string name="app_name">Github User App</string>
    <string name="app_icon">App Icon</string>
    <string name="splash_screen_title">GitHub User App</string>
    <string name="splash_screen_subtitle">by @fachrizalmrsln</string>
    <string name="icon_search_home_page">Icon Search Home Page</string>
    <string name="search_here">Search here . . .</string>
    <string name="fachrizal_mursalin">Fachrizal Mursalin</string>
    <string name="fachrizalmrsln">\@fachrizalmrsln</string>
    <string name="android_engineer_at_ajaib">Android Engineer at Ajaib</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="fachrizalmrslngmail">fachrizalmrsln@gmail.com</string>
    <string name="start_count">102</string>
    <string name="description">This is a sample app that is part of a series of blog posts I have written about how to architect an android application using Uncle Bob\'s clean architecture approach.</string>
    <string name="k_12">12K</string>
    <string name="_120">120</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="updated_15_hours_ago">Updated 15 hours ago</string>
    <string name="ups_nsomething_went_wrong">Ups. . . \nSomething went wrong</string>
    <string name="try_again">Try Again</string>
    <string name="no_connection_error">Unable to resolve host \"api.github.com\"</string>
    <string name="no_results_error">size 0 must be greater than zero.</string>
    <string name="search_not_found">Search for %s not found</string>
</resources>