<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_8"
    android:paddingTop="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_20">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/dp_46"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_4"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toTopOf="@id/iv_image"
        tools:text="@string/fachrizal_mursalin" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_11"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        tools:text="@string/fachrizalmrsln" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_2"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/android_engineer_at_ajaib" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_10"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toBottomOf="@id/tv_about"
        tools:text="@string/jakarta_indonesia" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toEndOf="@id/tv_location"
        app:layout_constraintTop_toTopOf="@id/tv_location"
        tools:text="@string/fachrizalmrslngmail" />

</androidx.constraintlayout.widget.ConstraintLayout>