<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail_page.DetailPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_16"
            android:ellipsize="end"
            android:lines="1"
            android:maxWidth="@dimen/dp_200"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="@id/iv_image"
            tools:text="@string/fachrizal_mursalin" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_16"
            android:ellipsize="end"
            android:lines="1"
            android:maxWidth="@dimen/dp_200"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/fachrizalmrsln" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_16"
            android:ellipsize="end"
            android:maxWidth="@dimen/dp_200"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            tools:text="@string/android_engineer_at_ajaib" />

        <LinearLayout
            android:id="@+id/ll_container_follower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_about">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:alpha="0.7"
                android:src="@drawable/ic_follower"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                tools:text="@string/k_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/followers"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:layout_width="@dimen/dp_4"
                android:layout_height="@dimen/dp_4"
                android:layout_marginStart="@dimen/dp_8"
                android:alpha="0.3"
                android:src="@drawable/ic_dot"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                tools:text="@string/_120" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/following"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/ll_container_follower"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_2"
                android:alpha="0.7"
                android:src="@drawable/ic_location"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                tools:text="@string/jakarta_indonesia" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_12"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/ll_container_location"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_2"
                android:alpha="0.7"
                android:src="@drawable/ic_email"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                tools:text="@string/fachrizalmrslngmail" />

        </LinearLayout>

        <View
            android:id="@+id/view_space_bottom"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_2"
            android:alpha="0.6"
            android:background="@drawable/background_gray_box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repositories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cl_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:itemCount="5"
        tools:listitem="@layout/item_repositories" />

</RelativeLayout>