<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_16"
    android:paddingTop="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_20">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="@id/iv_image"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:ellipsize="end"
            android:maxLines="4"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/description" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_14"
            android:ellipsize="end"
            android:lines="1"
            android:maxWidth="@dimen/dp_150"
            android:maxLines="1"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@id/iv_star"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="@string/start_count" />

        <TextView
            android:id="@+id/tv_last_updated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_star_count"
            app:layout_constraintTop_toTopOf="@id/tv_star_count"
            tools:text="@string/updated_15_hours_ago" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>